--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
+    <img src="Firefly A rainbow is floating above a happy sun that is hugging a sad raincloud. 71064(2).jpg" alt="">
     <p>Det absolut tråkigaste jag gjort i sommar var när jag jobbade på Hansens charkuteri</p>
     <p>men jag har också gjort en rolig grej och det var när jag fiskade.</p>
     <p> Jag har badat 7 gånger och det kändes skönt och väldigt varmt.</p>
